crates/validation-tests/tests/snapshots/scenario_tests__capture_duplicates.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source/bindings/0,
        error: capture testing/s3-source bindings duplicate the endpoint resource target.one at test://example/int-string-captures#/captures/testing~1s3-source/bindings/1,
    },
]
