crates/validation-tests/tests/snapshots/scenario_tests__collection_schema_string.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/string-schema#/collections/testing~1string-schema/schema,
        error: collection schema test://example/string-schema#/collections/testing~1string-schema/schema must have type 'object',
    },
]
