crates/validation-tests/tests/snapshots/scenario_tests__materialization_driver_unknown_constraint.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/0,
        error: materialization testing/webhook/deliveries field str is not satisfiable (selector includes field, but connector forbids it with reason: ),
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/0,
        error: unknown constraint type 98,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1,
        error: materialization testing/webhook/deliveries field Len is not satisfiable (selector includes field, but connector forbids it with reason: ),
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1,
        error: unknown constraint type 99,
    },
]
