crates/validation-tests/tests/snapshots/scenario_tests__materialization_duplicates.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/db-views#/materializations/testing~1db-views/bindings/0,
        error: materialization testing/db-views bindings duplicate the endpoint resource target.one at test://example/db-views#/materializations/testing~1db-views/bindings/1,
    },
]
