crates/validation-tests/tests/snapshots/scenario_tests__materialization_field_errors.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1/fields/include/biT,
        error: include projection biT does not exist in collection testing/int-halve,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1/fields/exclude/0,
        error: exclude projection BiTT does not exist in collection testing/int-halve,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1/fields/exclude/1,
        error: exclude projection WildlyOffName does not exist in collection testing/int-halve,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/bindings/1/fields/exclude/2,
        error: materialization testing/webhook/deliveries field int is not satisfiable (field is both included and excluded by selector),
    },
]
